--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <body>
     <%= render 'layouts/navbar-not-login' %>
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="padding-top: 80px;">
       <%= render 'layouts/flash_messages' %>
 
       <%= yield %>
