--- a/app/assets/stylesheets/toppages.scss
+++ b/app/assets/stylesheets/toppages.scss
@@ -7,6 +7,7 @@
      background-repeat: no-repeat;
      background-size: cover;
      padding: 150px 0 100px 0;
+     margin-top: -80px;
      text-align: center;
      color: white;
 }
