--- a/app/views/layouts/_navbar-not-login.html.erb
+++ b/app/views/layouts/_navbar-not-login.html.erb
@@ -1,14 +1,30 @@
 <header class="mb-4" style="height: 70px; width: 100%; opacity: 0.8; position: fixed; z-index: 10; top: 0;">
   <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #DDDDDD">
-    <a class="navbar-brand" href="/">NotSmoking</a>
+    <% if logged_in? %>
+      <%= link_to NotSmoking, "/users/#{session[:user_id]}", class: "navbar-brand" %>
+    <% else %>
+      <a class="navbar-brand" href="/">NotSmoking</a>
+    <% end %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item"><a href="#" class="nav-link">ログイン</a></li>
-        <li class="nav-item"><%= link_to "新規登録", signup_path, class: "nav-link" %></li>
+        <% if logged_in? %>
+          <li class="nav-item"><%= link_to 'ユーザ一覧', users_path, class: 'nav-link' %></li>
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><%= current_user.name %></a>
+            <ul class="dropdown-menu dropdown-menu-right">
+              <li class="dropdown-item"><%= link_to 'プロフィール編集', edit_user_path(current_user) %></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><%= link_to 'ログアウト', logout_path, method: :delete %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li class="nav-item"><%= link_to 'ログイン', login_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to "新規登録", signup_path, class: "nav-link" %></li>
+        <% end %>
       </ul>
     </div>
   </nav>
