--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,7 +27,7 @@
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
 
-      <%= f.submit '登録', class: 'btn btn-primary btn-signup btn-block mt-4' %>
+      <%= f.submit '登録', class: 'btn btn-primary btn-block mt-4' %>
     <% end %>
   </div>
 </div>
