--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <%= render 'layouts/navbar-not-login' %>
+    <%= render 'layouts/navbar' %>
 
     <div class="container-fluid" style="padding-top: 80px;">
       <%= render 'layouts/flash_messages' %>
