--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -7,7 +7,17 @@
       <%= link_to "今すぐ始めよう", signup_path, class: "btn btn-lg btn-primary" %>  
     </div>
   </div>
-</div>
-<div class="point-wrapper">
-    
+  <div class="point-wrapper col-12">
+    <h1 class="text-center">本気で禁煙したいあなたへ</h1>
+    <div class="point-image">
+      <img src="/toppage-graph1.png" alt="喫煙記録のグラフ">
+    </div>
+    <h2 class="text-center mb-3">長期的に喫煙記録を管理できる！</h2>
+    <p class="text-center">毎日の記録がグラフ化されるので長期的な目線で禁煙への進捗具合を確認できる！</p>
+    <div class="point-image">
+      <img src="/toppage-graph2.png" alt="他ユーザの記録">
+    </div>
+    <h2 class="text-center mb-3">他のユーザと切磋琢磨しよう！</h2>
+    <p class="text-center">フォローすれば他のユーザの喫煙記録を見ることができる！共に刺激を受けあって禁煙に成功しよう！</p>
+  </div>
 </div>
