--- a/app/assets/stylesheets/toppages.scss
+++ b/app/assets/stylesheets/toppages.scss
@@ -20,3 +20,30 @@
     padding-top: 150px;
     padding-right: 60px;
 }
+
+
+.point-wrapper{
+    padding-top: 60px;
+    padding-bottom: 50px;
+    background-color: #F5DEB3;
+}
+
+.point-image img{
+    width: 500px;
+    height: 400px;
+    
+    
+}
+
+.point-image{
+    text-align: center;
+    background-color: white;
+    margin-top: 60px;
+    margin-bottom: 40px;
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
+.point-wrapper p{
+    font-size: 120%;
+}
