--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,34 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="heading text-center">
+    <h1>プロフィール編集画面</h1>
+</div>
+
+<div class="row mb-5">
+    <div class="col-sm-6 offset-sm-3 mb-5">
+        <div class="image-wrapper">
+            
+            <%= image_tag @user.image_name.url, class: "icon profile-image" %>
+            
+        </div>
+        <%= form_with(model: @user, local: true,  multipart: true) do |f| %>
+            <%= render 'layouts/error_messages', model: f.object %>
+            <div class="form-group">
+              <%= f.label :name, 'ユーザ名' %>
+              <%= f.text_field :name, class: 'form-control' %>
+            </div>
+        
+            <div class="form-group">
+              <%= f.label :email, 'メールアドレス' %>
+              <%= f.email_field :email, class: 'form-control' %>
+            </div>
+        
+            <div class="form-group">
+              <%= f.label :image_name, 'プロフィール画像' %>
+              <%= f.file_field :image_name, class: 'form-control' %>
+            </div>
+        
+        
+        
+            <%= f.submit '更新', class: 'btn btn-primary btn-block mt-4' %>
+        <% end %>
+    </div>
+</div>
