--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="heading text-center">
+  <h1>ユーザ一覧</h1>
+</div>
+
+<%= render "user_stock", users: @users %>
