--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row mb-5">
     <div class="col-sm-6 offset-sm-3 mb-5">
-        <div class="image-wrapper">
+        <div class="image-wrapper text-center">
             
             <%= image_tag @user.image_name.url, class: "icon profile-image" %>
             
