--- a/app/assets/stylesheets/toppages.scss
+++ b/app/assets/stylesheets/toppages.scss
@@ -4,6 +4,7 @@
 .main-image{
      background-image: url("/non-smoking-main.jpg");
      height: 550px;
+     background-position: 50% 10%;
      background-repeat: no-repeat;
      background-size: cover;
      padding: 150px 0 100px 0;
@@ -17,8 +18,8 @@
 }
 
 .btn-wrapper{
-    padding-top: 150px;
-    padding-right: 60px;
+    margin-top: 150px;
+    
 }
 
 
@@ -46,4 +47,30 @@
 
 .point-wrapper p{
     font-size: 120%;
+}
+
+@media (max-width:856px) {
+    
+  
+    
+    .btn-wrapper{
+        margin-top: 180px;
+        margin-right: 30px;
+    }
+    
+    
+}
+
+@media (max-width:576px){
+    h1{
+        font-size: 2.0rem;
+    }
+    
+    h2{
+        font-size: 1.5rem;
+    }
+    
+    .point-wrapper p{
+        font-size: 75%;
+    }
 }
