--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-12 main-image">
-    <h1 class="title">禁煙をすぐにあきらめてしまう人へおすすめ！<br><br>
-    <span class="title-message">毎日の喫煙記録を管理しよう</span>
+    <h1 class="title">禁煙に悩む人へおすすめ！<br><br>
+    <span class="title-message">毎日の喫煙記録を管理しよう!</span>
     </h1>
     <div class="btn-wrapper">
       <%= link_to "今すぐ始めよう", signup_path, class: "btn btn-lg btn-primary" %>  
@@ -18,6 +18,6 @@
       <img src="/toppage-graph2.png" alt="他ユーザの記録">
     </div>
     <h2 class="text-center mb-3">他のユーザと切磋琢磨しよう！</h2>
-    <p class="text-center">フォローすれば他のユーザの喫煙記録を見ることができる！共に刺激を受けあって禁煙に成功しよう！</p>
+    <p class="text-center">フォローすれば他のユーザの喫煙記録を見ることができる！<br>共に刺激を受けあって禁煙に成功しよう！</p>
   </div>
 </div>
