--- a/app/views/users/_user_stock.html.erb
+++ b/app/views/users/_user_stock.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="col-sm-6 offset-sm-3">
+    <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2">
         <ul class="list-unstyled">
           <% users.each do |user| %>
-            <li class="media mb-3">
+            <li class="media">
               <div>
                 <%= image_tag user.image_name.url, class: "icon image-icon mr-2"%>  
               </div>
@@ -10,7 +10,7 @@
                 <% if current_user == user %> 
                   <p class="user-name"><%= user.name %></p>
                 <% else %>
-                  <p class="user-name"><%= link_to user.name, user_path(user)  %></p>
+                  <p class="user-name"><%= link_to user.name, user_path(user), class: "anchor"  %></p>
                 <% end %>
               </div>
               <div>
