--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-sm-6 offset-sm-3">
         <div class="user-profile">
-            <div class="show-image-wrapper">
-                <%= image_tag @user.image_name.url, class: "icon show-image image-icon" %>
+            <div class="show-image-wrapper text-center">
+                <%= image_tag @user.image_name.url, class: "icon image-icon" %>
             </div>
             <p class="text-center user-name mb-0"><%= @user.name %></p>
         </div>
