--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -14,20 +14,14 @@
     
 }
 
-.show-image-wrapper{
-    
-
-}
-
-
 .user-name{
     font-size: 200%;
 }
 
-.image-icon{
+.show-image-icon{
     
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     
 }
@@ -83,4 +77,11 @@
 
 .anchor{
     color: black;
+}
+
+.image-icon{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    
 }
