--- a/app/views/users/_user_stock.html.erb
+++ b/app/views/users/_user_stock.html.erb
@@ -3,10 +3,10 @@
         <ul class="list-unstyled">
           <% users.each do |user| %>
             <li class="media">
-              <div>
-                <%= image_tag user.image_name.url, class: "icon image-icon mr-2"%>  
+              <div class="mr-2">
+                <%= image_tag user.image_name.url, class: "icon image-icon "%>  
               </div>
-              <div>
+              <div class="ml-5">
                 <% if current_user == user %> 
                   <p class="user-name"><%= user.name %></p>
                 <% else %>
