--- a/app/assets/stylesheets/toppages.scss
+++ b/app/assets/stylesheets/toppages.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the toppages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+h1{
+    font-weight: 1000;
+}
+
 .main-image{
      background-image: url("/non-smoking-main.jpg");
      height: 550px;
@@ -18,7 +22,7 @@
 }
 
 .btn-wrapper{
-    margin-top: 150px;
+    margin-top: 100px;
     
 }
 
@@ -30,8 +34,9 @@
 }
 
 .point-image img{
-    width: 500px;
-    height: 400px;
+    width: 576x;
+    height: 460px;
+    
     
     
 }
@@ -54,7 +59,7 @@
   
     
     .btn-wrapper{
-        margin-top: 180px;
+        
         margin-right: 30px;
     }
     
@@ -73,4 +78,29 @@
     .point-wrapper p{
         font-size: 75%;
     }
+    
+    .point-image img{
+        width: 100%;
+        height: auto;
+    }
+    
+    .btn-wrapper{
+        margin-right: 0;
+        margin-top: 150px;
+    }
+}
+
+@media (max-width:400px) {
+    h1{
+        font-size: 1.5rem;
+    }
+    
+    h2{
+        font-size: 1.2rem;
+    }
+    
+    .point-wrapper p{
+        font-size: 55%;
+    }
+
 }
