--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-12 main-image">
-    <h1 class="title">禁煙に悩む人へおすすめ！<br><br>
+    <h1 class="title">禁煙に悩む人へおすすめ！<br><br><br>
     <span class="title-message">毎日の喫煙記録を管理しよう!</span>
     </h1>
     <div class="btn-wrapper">
