--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
             <div class="text-center">
                 <%= image_tag @user.image_name.url, class: "icon show-image-icon" %>
             </div>
-            <p class="text-center user-name mb-0"><%= @user.name %></p>
+            <p class="text-center mb-0 mt-2" style="font-size: 120%"><%= @user.name %></p>
         </div>
         <div>
             <ul class="nav justify-content-center mb-3" style="align-items: center;"> <!--flexアイテムにvertical-align: middleは効かなさそうなので親要素flexコンテナーにalign-items: centerを -->
