--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -15,7 +15,7 @@
 }
 
 .user-name{
-    font-size: 200%;
+    font-size: 160%;
 }
 
 .show-image-icon{
@@ -85,3 +85,75 @@
     border-radius: 50%;
     
 }
+
+
+@media(max-width: 992px){
+    .responsive-btn{
+        font-size: 0.6rem;
+    }
+    
+    .image-icon{
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+    }
+    
+    .list-unstyled .media div:nth-child(2){
+        line-height: 70px;
+        width: 300px;
+    }
+    
+    .list-unstyled .media div:nth-child(3){
+        line-height: 70px;
+        margin-left: 10px;
+    }
+    
+    .user-name{
+        font-size: 120%;
+    }
+    
+
+}
+
+
+@media (max-width: 576px){
+    
+    .responsive-btn{
+        padding: 0.375rem 0.375rem;
+    }
+    
+    .image-icon{
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+    }
+    
+    .list-unstyled .media div:nth-child(2){
+        line-height: 50px;
+        width: 300px;
+    }
+    
+    .list-unstyled .media div:nth-child(3){
+        line-height: 50px;
+        margin-left: 10px;
+    }
+    
+    .user-name{
+        font-size: 70%;
+    }
+    
+    .show-image-icon{
+        
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+    
+    }
+    
+
+    
+
+
+}
+
+
