編集削除ボタン

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -50,8 +50,8 @@
     
 }
 
-.pagination{
-    margin-left: 200px;
+.pagination {
+  justify-content: center;
 }
 
 // .perfect-circle{
@@ -148,6 +148,9 @@
         height: 100px;
         border-radius: 50%;
     
+    }
+    .table{
+        font-size: 0.8rem;
     }
 
     
