navbar色合い変更

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,15 +15,20 @@
  */
 
 header{
-    height: 70px; 
+    height: 65px; 
     width: 100%; 
     opacity: 0.8; 
     position: fixed;
     z-index: 10; 
     top: 0;
+    
 }
 
 .logo{
     width: 100px;
     height: 40px;
+}
+
+.nav-color li a{
+    color: black!important;
 }
