--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,14 @@
  *= require_tree .
  *= require_self
  */
+body{
+    background-image: url("/street1920.jpg");
+    background-color:rgba(255,255,255,0.8);
+    background-blend-mode:lighten;
+    background-size: cover;
+    background-attachment: fixed;
+    
+}
 
 header{
     height: 65px; 
@@ -31,4 +39,18 @@ header{
 
 .nav-color li a{
     color: black!important;
+}
+
+
+.container-fluid{
+    padding-top: 80px;
+}
+
+@media (max-width: 576px){
+
+    body{
+        background-position: center top;
+        
+        
+    }
 }
