--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -14,14 +14,20 @@
     
 }
 
+#user_image_name{
+    font-size: 0.8rem;
+}
+
+
+
 .user-name{
     font-size: 160%;
 }
 
 .show-image-icon{
     
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     
 }
@@ -113,6 +119,8 @@
     }
     
 
+    
+
 }
 
 
@@ -159,5 +167,4 @@
 
 
 }
-
 
