--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,8 @@
   <body>
     <%= render 'layouts/navbar' %>
 
-    <div class="container-fluid" style="padding-top: 80px;">
+    <div class="container-fluid">
       <%= render 'layouts/flash_messages' %>
-
       <%= yield %>
     </div>
   </body>
